--- a/config.yaml
+++ b/config.yaml
@@ -13,7 +13,7 @@ trading:
   stop_loss_buffer: 0.005
   futures: false  # true für Futures, false für Spot
 execution:
-  mode: "testnet"
+  mode: "live" # live oder testnet
   max_trades_per_day: 3
 logging:
   enabled: true
