--- a/config.yaml
+++ b/config.yaml
@@ -1,23 +1,34 @@
 binance:
   api_key: ${BINANCE_API_KEY}
   api_secret: ${BINANCE_API_SECRET}
-trading:
-  symbols:
-  - BTC/USDT
-  - ETH/USDT
-  - BNB/USDT
-  - SOL/USDT
-  - PEPE/USDT
-  - SUI/USDT
-  timeframe: 5m
-  stake_percent: 0.02
-  futures: false
 execution:
-  mode: live
   max_trades_per_day: 10
+  mode: live
 logging:
   enabled: true
   path: logs/trades.csv
 telegram:
-  token: ${TELEGRAM_TOKEN}
   chat_id: ${TELEGRAM_CHAT_ID}
+  token: ${TELEGRAM_TOKEN}
+trading:
+  futures: true
+  futures_symbols:
+  - ETHUSDT
+  - ADAUSDT
+  - SOLUSDT
+  - BNBUSDT
+  - BTCUSDT
+  - 1000PEPEUSDT
+  - SUIUSDT
+  - XRPUSDT
+  stake_percent: 0.02
+  symbols:
+  - ETH/USDT
+  - ADA/USDT
+  - SOL/USDT
+  - BNB/USDT
+  - BTC/USDT
+  - PEPE/USDT
+  - SUI/USDT
+  - XRP/USDT
+  timeframe: 5m
