--- a/futures_symbols.yaml
+++ b/futures_symbols.yaml
@@ -390,6 +390,7 @@
 - SYRUPUSDT
 - SYSUSDT
 - TACUSDT
+- TAGUSDT
 - TAIKOUSDT
 - TANSSIUSDT
 - TAOUSDT
@@ -451,5 +452,6 @@
 - ZILUSDT
 - ZKJUSDT
 - ZKUSDT
+- ZORAUSDT
 - ZROUSDT
 - ZRXUSDT
