--- a/strategy_high_volatility_breakout_momentum.yaml
+++ b/strategy_high_volatility_breakout_momentum.yaml
@@ -5,7 +5,7 @@ params:
   stop_loss_pct: 0.03 # 3% Stop-Loss
   take_profit_pct: 0.07 # 7% Take-Profit
   trailing_trigger_pct: 0.02 # Trailing Stop wird bei 2% Gewinn aktiviert
-  price_change_pct: 0.0125 # 1.5% Preisänderung für Long-Signal
+  price_change_pct: 0.0125 # 1.25% Preisänderung für Long- oder Short-Signal
   price_change_periods: 5 # 5 Perioden für Preisänderung
   volume_mult: 1.5 # Multiplikator für Volumen
   rsi_long: 55 # RSI-Schwelle für Long-Einstieg
@@ -13,4 +13,4 @@ params:
   rsi_tp_exit: 50 # RSI-Schwelle für Take-Profit-Exit
   rsi_period: 20 # RSI-Berechnungsperiode
   momentum_exit_rsi: 50 # RSI-Schwelle für Momentum-Exit
-  trailing_stop_trigger_pct: 0.015  # Bei +1.5% Gewinn wird Trailing Stop aktiviert
+  trailing_stop_trigger_pct: 0.0175  # Bei +1.75% Gewinn wird Trailing Stop aktiviert
